[package]
name = "livclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.3", features = ["web", "ssr"] }
tokio = { version = "1.17.0", features = ["full"]}
axum = "0.5.1"